--- a/Pizza.html
+++ b/Pizza.html
@@ -20,16 +20,27 @@
                     <input class="size" type="radio" name="Size" value="Extra Large Pizza"> Extra Large Pizza<br>
 
                 </div>
+                <div class="menu middle">
+                    <h3>Vegetables:</h3>
+                    <input class="tops" type="checkbox" name="Veg" value="Mushroom">Mushroom<br>
+                    <input class="tops" type="checkbox" name="Veg" value="Red Onion">Red Onion<br>
+                    <input class="tops" type="checkbox" name="Veg" value="Olives">Olives<br>
+                    <input class="tops" type="checkbox" name="Veg" value="Green Olives">Green Olives<br>
+                    <input class="tops" type="checkbox" name="Veg" value="Garlic">Garlic<br>
+                    <input class="tops" type="checkbox" name="Veg" value="Tomato">Tomato<br>
+                    <input class="tops" type="checkbox" name="Veg" value="Bell Pepper">Bell Pepper<br>
+                </div>
                 <div class="menu right">
                     <h3>Meats:</h3>
-                    <input class="meats" type="checkbox" name="Meat" value="Pepperoni">Pepperoni<br>
-                    <input class="meats" type="checkbox" name="Meat" value="Chicken">Chicken<br>
-                    <input class="meats" type="checkbox" name="Meat" value="Sausage">Sausage<br>
-                    <input class="meats" type="checkbox" name="Meat" value="Canadian Bacon">Canadian Bacon<br>
-                    <input class="meats" type="checkbox" name="Meat" value="Ground Beef">Ground Beef<br>
-                    <input class="meats" type="checkbox" name="Meat" value="Anchovy">Anchovy<br>
-                    <input class="meats" type="checkbox" name="Meat" value="Shrimp">Shrimp<br>
+                    <input class="tops" type="checkbox" name="Meat" value="Pepperoni">Pepperoni<br>
+                    <input class="tops" type="checkbox" name="Meat" value="Chicken">Chicken<br>
+                    <input class="tops" type="checkbox" name="Meat" value="Sausage">Sausage<br>
+                    <input class="tops" type="checkbox" name="Meat" value="Canadian Bacon">Canadian Bacon<br>
+                    <input class="tops" type="checkbox" name="Meat" value="Ground Beef">Ground Beef<br>
+                    <input class="tops" type="checkbox" name="Meat" value="Anchovy">Anchovy<br>
+                    <input class="tops" type="checkbox" name="Meat" value="Shrimp">Shrimp<br>
                 </div>
+
                 <div id="cart">
                     <div id="showText"></div>
                     <div id="totalPrice"></div>
